--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="/twitter-bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <!-- twitter bootstrap addon -->
     <style type="text/css">
@@ -33,12 +33,12 @@
         }
     </style>
 
-    <link href="twitter-bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/twitter-bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <!--<script id="json" src="/classpath/json.js" type="text/javascript"></script>-->
 
-    <script src="js/jquery-2.0.2.min.js"></script>
+    <script src="/js/jquery-2.0.2.min.js"></script>
     <!-- <script src="js/jquery-migrate-1.2.1.min.js"></script> -->
-    <script src="twitter-bootstrap/js/bootstrap.min.js"></script>
+    <script src="/twitter-bootstrap/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -64,7 +64,6 @@
                 </p>
                 <ul class="nav">
                     <li class="active"><a href="/">Home</a></li>
-                    <li><a href="/test">Test</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
@@ -77,19 +76,24 @@
 <div class="container">
 
     <div class="row">
+
         <div class="span3">
+
             <div class="well sidebar-nav">
                 <ul class="nav nav-list">
                     <li class="nav-header">Menu</li>
                     <!--<li class="active"><a href="#">Link</a></li>-->
                     <li><a href="/">Home</a></li>
-                    <li><a href="/test">Test page</a></li>
+                    <li><a class="lift:Controls.listCountriesLink" href="">List of countries</a></li>
+                    <li><a class="lift:Controls.createCountryLink" href="">Add country</a></li>
                     <!--<li class="nav-header">Sidebar</li>-->
                 </ul>
-                <div class="messages">
-                    <div data-lift="Msgs"></div> <!--<div class="lift:Msgs?showAll=true"></div>-->
-                </div>
             </div>
+
+            <div class="messages">
+                <div data-lift="Msgs"></div> <!--<div class="lift:Msgs?showAll=true"></div>-->
+            </div>
+
         </div>
 
         <div class="span9">
